--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,13 +1,55 @@
 {
   "extends": "stylelint-config-standard",
+  "plugins": [
+    "stylelint-order",
+    "stylelint-scss"
+  ],
   "rules": {
-    "indentation": "tab",
-    "number-leading-zero": null,
-    "property-no-unknown": [ true, {
-      "ignoreProperties": [
-        "composes"
-      ]
-    }],
-    "unit-whitelist": ["em", "rem", "s", "%"]
+    "at-rule-empty-line-before": [
+      "always",
+      { "except": ["blockless-after-blockless", "first-nested"], "ignore": ["after-comment"] }
+    ],
+    # "color-named": "never",
+    "declaration-colon-newline-after": null,
+    "declaration-empty-line-before": null,
+    "declaration-property-value-blacklist": {
+      "/^border/": ["none"]
+    },
+    "function-url-quotes": "always",
+    "indentation": 2|"tab",
+    "max-nesting-depth": 5,
+    "no-duplicate-selectors": true,
+    "no-empty-source": [true, { "severity": "warning" }],
+    "no-missing-end-of-source-newline": true,
+    "number-max-precision": 4,
+    "property-no-vendor-prefix": true,
+    "selector-class-pattern": "^((?:-{1,2}|_{2})?[a-z0-9]+(?:(?:-{1,2}|_{2})[a-z0-9]+)*)(?:-{1,2}|_{2})?$",
+    "selector-max-compound-selectors": 5,
+    "selector-max-specificity": ["0,6,4"],
+    "selector-no-qualifying-type": [true, { "ignore": ["class"] }],
+    "selector-pseudo-element-colon-notation": "single",
+    "string-quotes": "single",
+    "unit-blacklist": [
+      "px"
+    ],
+    "order/order": [
+      "custom-properties",
+      "dollar-variables",
+      { "type": "at-rule", "name": "extend" },
+      { "type": "at-rule", "name": "include", "hasBlock": false },
+      "declarations",
+      { "type": "at-rule", "name": "include", "parameter": "/ix|sm|is|md|im|lg|xl|xxl/", "hasBlock": true },
+      "rules",
+      "at-rules"
+    ],
+    "order/properties-alphabetical-order": true,
+    "scss/at-import-no-partial-leading-underscore": true,
+    "scss/at-import-partial-extension-blacklist": ["scss"],
+    "scss/dollar-variable-colon-space-after": "always",
+    "scss/dollar-variable-colon-space-before": "never",
+    "scss/dollar-variable-no-missing-interpolation": true,
+    "scss/double-slash-comment-whitespace-inside": "always",
+    "scss/operator-no-unspaced": true,
+    "scss/selector-no-redundant-nesting-selector": true
   }
 }
